local/k8s-webhook/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: webhook
spec:
  containers:
    - name: curl
      image: alpine/curl
