local/k8s-webhook/webhook-template.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
webhooks:
  - name: webhook.webhook.svc.cluster.local
    admissionReviewVersions:
      - "v1"
    # It tells the Kubernetes API server that the webhook's operations are safe and idempotent
    sideEffects: "None"
    timeoutSeconds: 30
    objectSelector:
      matchLabels:
        webhook-enabled: "true"
    clientConfig:
      service:
        name: webhook
        namespace: webhook
        path: "/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURuekNDQW9lZ0F3SUJBZ0lVU2Q2dmZMemFXWUxINlN0WU5Xc0V2VnlNTi9nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1VqRUxNQWtHQTFVRUJoTUNRVlV4RURBT0JnTlZCQWdNQjBWNFlXMXdiR1V4RWpBUUJnTlZCQWNNQ1UxbApiR0p2ZFhKdVpURVFNQTRHQTFVRUNnd0hSWGhoYlhCc1pURUxNQWtHQTFVRUN3d0NRMEV3SGhjTk1qVXdOVEUyCk1ETXlPREExV2hjTk5EVXdOVEV4TURNeU9EQTFXakJTTVFzd0NRWURWUVFHRXdKQlZURVFNQTRHQTFVRUNBd0gKUlhoaGJYQnNaVEVTTUJBR0ExVUVCd3dKVFdWc1ltOTFjbTVsTVJBd0RnWURWUVFLREFkRmVHRnRjR3hsTVFzdwpDUVlEVlFRTER [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
